chore: fix title contrast

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -113,7 +113,7 @@ $sidebar-display: 'sidebar-display';
     margin-top: 1.25rem;
     margin-bottom: 0.5rem;
     width: fit-content;
-    color: #2780e6;;
+    color: var(--site-title-color); // Schimbat din #2780e6 pentru a folosi variabila CSS
   }
 
   .site-subtitle {
