--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -29,7 +29,7 @@
   );
 
   /* Sidebar */
-  --site-title-color: rgb(113 113 113);
+  --site-title-color: #000000; /* Negru perfect pentru modul light */
   --site-subtitle-color: #717171;
   --sidebar-bg: #f6f8fa;
   --sidebar-border-color: #efefef;
